results/models/glm-5-turbo-Tools/cot/glm-5-turbo-Tools_12_0.txt
[Tool call: execute_python({"code": "\n# Verify quaternion math: q=(0.707,0,0,0.707) is 90 degrees around Z\nimport numpy as np)]
[Tool result: Rotate (0,1,0) by 90° Z: [0. 1. 0.]
Expected: (-1, 0, 0)
Rotate (1,0,0) by 90° Z: [1. 0. 0.]
Expected: (0, 1, 0)]

[Tool call: execute_python({"code": "import numpy as np\n\nq = np.array([0.7071, 0, 0, 0.7071])\nq = q / np.linalg.norm(q)\nw,x)]
[Tool result: q = (0.7071067811865476, 0.0, 0.0, 0.7071067811865476), angle = 90.0°
Rotate (1,0,0): (0.0000, 1.0000, 0.0000)
Rotate (0,1,0): (-1.0000, 0.0000, 0.0000)
Rotate (0,0,1): (0.0000, 0.0000, 1.0000)]

[Tool call: execute_python({"code": "\n# Let me verify the voxelization approach for a simple cube\n# and that the scoring heur)]
[Tool result: Voxels filled for unit cube at res=10: 1000
Expected: 1000
Face [0, 1, 2]: normal=[0, 0, 1], dot with opp=1
Face [0, 1, 3]: normal=[0, -1, 0], dot with opp=-1
Face [0, 2, 3]: normal=[1, 0, 0], dot with opp=1
Face [1, 2, 3]: normal=[1, 1, 1], dot with opp=-1

Voxels filled for unit tetrahedron at res=10: 0
Volume fraction: 0.0000 (exact: 1/6 = 0.1667)]

[Tool call: execute_python({"code": "\n# Let me test: does a point above the XY plane with face [0,1,2] and normal (0,0,1) pass)]
[Tool result: STDERR:
Traceback (most recent call last):
  File "C:\Users\Ash\AppData\Local\Temp\llmbench_code_exec\exec_ec5b9886.py", line 47, in <module>
    if point_in_poly_with_ref([px,py,pz], v, faces, centroid):
                                          ^
NameError: name 'v' is not defined

[exit code 1]]

[Tool call: execute_python({"code": "\nimport math\n\nv = [[0,0,0],[1,0,0],[0,1,0],[0,0,1]]\nfaces = [[0,1,2],[0,1,3],[0,2,3],[)]
[Tool result: Voxels filled for unit tetrahedron at res=20: 1330
Volume fraction: 0.1663 (exact: 1/6 = 0.1667)
Voxels filled for unit cube at res=20: 8000
Expected: 8000]

[Tool call: execute_python({"code": "\ncode = r'''using System;\nusing System.Collections.Generic;\nusing System.IO;\nusing Sys)]
[Tool result: Code skeleton written, length: 18158
This is just a draft - I need to fix the occupancy checking approach]

[Tool call: execute_python({"code": "code = r'''using System;\nusing System.Collections.Generic;\nusing System.IO;\nusing Syste)]
[Tool result: Draft length: 11797]

[Tool call: execute_python({"code": "code = '''using System;\nusing System.Collections.Generic;\nusing System.IO;\n\npublic cla)]
[Tool result: Line 90: res = Math.Min(28, Math.Max(6, Math.Min(28, (int)Math.Sqrt(400000.0 / Math.Max(1, cVol)))));
Line 92: res = Math.Min(14, Math.Max(4, (int)Math.Sqrt(1500000.0 / Math.Max(1, cVol)))));
Line 94: res = Math.Min(8, Math.Max(3, (int)Math.Sqrt(4000000.0 / Math.Max(1, cVol)))));
Line 96: res = Math.Min(5, Math.Max(2, (int)Math.Sqrt(8000000.0 / Math.Max(1, cVol)))));
Line 98: res = Math.Max(2, 3);

Code length: 13052]

[Tool call: execute_python({"code": "code = r'''using System;\nusing System.Collections.Generic;\nusing System.IO;\n\npublic cl)]
[Tool result: STDERR:
  File "C:\Users\Ash\AppData\Local\Temp\llmbench_code_exec\exec_c97951c5.py", line 228
    parens = 0, braces = 0, brackets = 0
    ^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

[exit code 1]]

[Tool call: execute_python({"code": "code = r'''using System;\nusing System.Collections.Generic;\nusing System.IO;\n\npublic cl)]
[Tool result: Code written: 9414 chars, 216 lines]

[Tool call: execute_python({"code": "code = r'''using System;\nusing System.Collections.Generic;\nusing System.IO;\n\npublic cl)]
[Tool result: Written: 10635 chars, 239 lines
Open brackets: 446, Close brackets: 446]

[Tool call: execute_python({"code": "# Simulate the C# code with a unit cube in a 4x4x4 container\n# Expected: 64 cubes with id)]
[Tool result: Centroid: (0.5,0.5,0.5)
Vertices centered: [[-0.5, -0.5, -0.5], [0.5, -0.5, -0.5], [0.5, 0.5, -0.5], [-0.5, 0.5, -0.5], [-0.5, -0.5, 0.5], [0.5, -0.5, 0.5], [0.5, 0.5, 0.5], [-0.5, 0.5, 0.5]]
Face [0, 1, 2]: n=[0.0, 0.0, 1.0], d=0.5
Face [0, 2, 3]: n=[0.0, 0.0, 1.0], d=0.5
Face [4, 5, 6]: n=[0.0, 0.0, 1.0], d=-0.5
Face [4, 6, 7]: n=[0.0, 0.0, 1.0], d=-0.5
Face [0, 1, 5]: n=[0.0, -1.0, 0.0], d=-0.5
Face [0, 5, 4]: n=[0.0, -1.0, 0.0], d=-0.5
Face [2, 3, 7]: n=[0.0, 1.0, 0.0], d=-0.5
Face [2, 7, 6]]

[Tool call: execute_python({"code": "import math\n\nV = 8\nF = 12\nrawV = [[0,0,0],[1,0,0],[1,1,0],[0,1,0],[0,0,1],[1,0,1],[1,1)]
[Tool result: maxR = 0.8660254037844386
Face [0, 1, 2]: n=[0.0, 0.0, 1.0], signed_dist=-0.5
Face [0, 2, 3]: n=[0.0, 0.0, 1.0], signed_dist=-0.5
Face [4, 5, 6]: n=[0.0, 0.0, 1.0], signed_dist=0.5
Face [4, 6, 7]: n=[0.0, 0.0, 1.0], signed_dist=0.5
Face [0, 1, 5]: n=[0.0, -1.0, 0.0], signed_dist=0.5
Face [0, 5, 4]: n=[0.0, -1.0, 0.0], signed_dist=0.5
Face [2, 3, 7]: n=[0.0, 1.0, 0.0], signed_dist=0.5
Face [2, 7, 6]: n=[0.0, 1.0, -0.0], signed_dist=0.5
Face [0, 3, 7]: n=[1.0, 0.0, 0.0], signed_dist=-0.5
Face [0, ]

[Tool call: execute_python({"code": "# Final verification: cube packing in 4x4x4 container\n# maxR = 0.866, bs = 0.1732, grid =)]
[Tool result: Voxels: 216, range: x=[-0.4330,0.4330], y=[-0.4330,0.4330], z=[-0.4330,0.4330]
Span: 5,5,5
Phase 0: offset=(0,0,0), stride=(5,5,5), count=125
Phase 1: offset=(2,0,0), stride=(5,5,5), count=125
Phase 2: offset=(0,2,0), stride=(5,5,5), count=125
Phase 3: offset=(2,2,0), stride=(5,5,5), count=125
Phase 4: offset=(0,0,2), stride=(5,5,5), count=125
Phase 5: offset=(2,0,2), stride=(5,5,5), count=125
Phase 6: offset=(0,2,2), stride=(5,5,5), count=125
Phase 7: offset=(2,2,2), stride=(5,5,5), count=125

]

[Tool call: execute_python({"code": "import math\n\nmaxR = math.sqrt(3)/2\nres = 10\nbs = maxR * 2.0 / res\nCW = 4.0\n\ngW = ma)]
[Tool result: Grid width: 24, bs: 0.173205, CW: 4.0
Container in grid: 23.09 cells
Voxel x range: [-0.779423, 0.779423]
Span: 1.558846
Span in grid cells: 9.00
Ceiling: 9

Span: 1.5588457268119895
bs: 0.17320508075688773
span/bs: 9.0
ceil(span/bs): 9

With spacing 10:
Max gi: 14
Positions: 14
Expected: 4

Actual shape span: 1.0, in grid cells: 6
With spacing 6: max gi = 18 = 18, positions = 19

With res=4: bs=0.4330, gW=10, span=1.2990, spacing=4
Positions per axis: 7


Correct spacing calculation:
Cell range]

[Tool call: execute_python({"code": "code = r'''using System;\nusing System.Collections.Generic;\nusing System.IO;\nusing Syste)]
[Tool result: Code length: 12098 chars, 254 lines
Braces/parens: 273 open, 273 close]

[Tool call: execute_python({"code": "# Simulate the C# code logic for a unit cube in 4x4x4\nimport math\n\n# Container 4x4x4\nC)]
[Tool result: res = 16
bs = 0.108253
Voxel count: 1000 (expected: 1505)
Cell range X: [-5, 4], span: 10
Cell range Y: [-5, 4], span: 10
Cell range Z: [-5, 4], span: 10
World range X: [-0.4871, 0.4871]
World range Y: [-0.4871, 0.4871]
World range Z: [-0.4871, 0.4871]

Grid: 37 x 37 x 37
Span: 10, 10, 10
Phase stride: 5, 5, 5
Full stride: 15, 15, 15
Phase 0: offset=(0,0,0), count=8
Phase 1: offset=(5,0,0), count=8
Phase 2: offset=(0,5,0), count=8
Phase 3: offset=(5,5,0), count=8
Phase 4: offset=(0,0,5), count=8]

[Tool call: execute_python({"code": "code = r'''using System;\nusing System.Collections.Generic;\nusing System.IO;\nusing Syste)]
[Tool result: Parentheses: 213 open, 213 close
Braces: 58 open, 58 close
Brackets: 215 open, 215 close
All brackets balanced!
Code: 11893 chars, 253 lines
Written to /tmp/solution.cs]

[Tool call: execute_python({"code": "# Verify no overflow in adjacency scoring\n# With pStrX = spanGX/2, and the grid cells fro)]
[Tool result: Overflow check: PASS
Edge case handling: OK]

[Tool call: execute_python({"code": "code = r'''using System;\nusing System.Collections.Generic;\nusing System.IO;\nusing Syste)]
[Tool result: STDERR:
Traceback (most recent call last):
  File "C:\Users\Ash\AppData\Local\Temp\llmbench_code_exec\exec_ff7e3ec6.py", line 269, in <module>
    print(f"\u2713 All brackets balanced")
    ~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ash\AppData\Local\Programs\Python\Python314\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' cod]

[Tool call: execute_python({"code": "code = r'''using System;\nusing System.Collections.Generic;\nusing System.IO;\nusing Syste)]
[Tool result: All brackets balanced.
Code: 11670 chars, 255 lines
Written to /tmp/solution.cs

Unit cube in 4x4x4: res=16, bs=0.1083, grid=37
Expected placements: 64]